--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,6 @@ jobs:
         run: echo CI Work!
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Install Deps
         run: |
-          echo CI TEST FINISH
+          sudo apt install g++-8 gcc-8 g++ gcc -y
